# template_Django_docker

./: .gitignore  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
djangoapp/: requirements.txt
djangoapp/app_exemplo/: apps.py  forms.py  models.py  urls.py  views.py
djangoapp/app_exemplo/migrations/: 0001_initial.py
djangoapp/app_exemplo/templates/app_exemplo/: details.html  form.html  index.html
djangoapp/project/: settings.py  urls.py
djangoapp/templates/: settings.py
djangoapp/templates/parciais/: _footer.html  _head.html  _nav.html
djangoapp/templates/static/: base.html
djangoapp/templates/static/assets/bootstrap/css/: bootstrap.css
dotenv_files/: .env-example  .env_utilizado_projeto
scripts/: commands.sh
