[tool.poetry]
name = "djangoapp"
version = "0.1.0"
description = ""
authors = ["bruno <a@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.5"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
django-summernote = "^0.8.20.0"
django-axes = "^6.4.0"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
